找回密码多语言修改

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -64,6 +64,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivLogo" />
     <ScrollView
+        android:id="@+id/sv_content_view"
         app:layout_constraintTop_toBottomOf="@+id/label_register"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="match_parent"
@@ -131,10 +132,10 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
                         android:layout_marginTop="@dimen/margin_2"
-                        app:hintText="@string/hint_verification_code_by_sms"
+                        app:hintText="@string/hint_verification_code"
                         app:iconSignifier="@drawable/ic_valid"
                         app:isResponsiveIconColor="false"
-                        app:labelText="@string/verification_code_by_sms"
+                        app:labelText="@string/verification_code"
                         app:labelTextStyle="normal"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -159,7 +160,7 @@
                         android:layout_height="match_parent"
                         android:background="@drawable/btn_send_sms"
                         android:minHeight="32dp"
-                        android:text="@string/get_verification_code"
+                        android:text="@string/get_phone_code"
                         android:textAllCaps="false"
                         android:textColor="@color/color_2b2b2b_ffffff"
                         android:textSize="@dimen/textSize14sp"
@@ -238,7 +239,7 @@
                     app:endIcon="@drawable/ic_eye_close"
                     app:hintText="@string/hint_confirm_password"
                     app:isResponsiveIconColor="false"
-                    app:labelText="@string/confirm_password"
+                    app:labelText="@string/new_login_password_confirm"
                     app:labelTextStyle="normal"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/et_login_password"
@@ -316,22 +317,32 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
-  <!--  <ScrollView
-        android:id="@+id/scrollView2"
+
+    <LinearLayout
+        app:layout_constraintTop_toBottomOf="@+id/sv_content_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_10"
-        android:layout_marginTop="@dimen/margin_10"
-        android:layout_marginRight="@dimen/margin_10"
-        android:background="@drawable/okbet_bg_login_card"
-        android:elevation="2dp"
-        android:overScrollMode="never"
-        android:scrollbars="none"
-        app:layout_constraintTop_toBottomOf="@id/label_register">
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/margin_20"
+        android:gravity="center"
+        android:orientation="horizontal">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/customer_service"
+            android:textColor="@color/color_A5A9B3"
+            android:textSize="@dimen/textSize14sp" />
 
-    </ScrollView>-->
+        <TextView
+            android:id="@+id/tv_customer_service"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_service"
+            android:textColor="@color/color_025BE8"
+            android:textSize="@dimen/textSize14sp" />
 
+    </LinearLayout>
     <include
         android:id="@+id/bottom_liences"
         layout="@layout/bottom_register_layout"
