--- a/app/src/main/res/layout/item_language.xml
+++ b/app/src/main/res/layout/item_language.xml
@@ -7,6 +7,17 @@
     android:paddingVertical="@dimen/margin_10"
     android:gravity="center_vertical">
 
+    <CheckBox
+        android:id="@+id/cb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:layout_marginRight="10dp"
+        android:includeFontPadding="true"
+        android:button="@null"
+        android:checked="true"
+        android:drawableLeft="@drawable/selector_radio_white" />
+
     <ImageView
         android:id="@+id/iv_logo"
         android:layout_width="@dimen/margin_24"
@@ -18,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:textColor="@color/color_2b2b2b_ffffff"
+        android:textColor="@color/color_FFFFFF_414655"
         android:textSize="@dimen/textSize14sp"
         tools:text="@string/odd_type_eu" />
 </LinearLayout>
