--- a/app/src/main/res/layout/item_main_home_menu.xml
+++ b/app/src/main/res/layout/item_main_home_menu.xml
@@ -8,7 +8,7 @@
     tools:layout_height="wrap_content"
     tools:ignore="ContentDescription, SpUsage">
 
-    <androidx.cardview.widget.CardView
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
@@ -22,7 +22,7 @@
             android:layout_height="160dp"
             android:adjustViewBounds="true"
             android:src="@drawable/card_sport_home" />
-    </androidx.cardview.widget.CardView>
+    </FrameLayout>
 
     <ImageView
         android:id="@+id/iv_people"
