增加直播列表

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -439,6 +439,7 @@
     <color name="color_F1A027">#F1A027</color>
     <color name="color_0500181E">#0500181E</color>
     <color name="color_80C9CFD7">#80C9CFD7</color>
+    <color name="color_EC4139">#EC4139</color>
 
     <!--region keyboard-->
     <color name="color_43546F">#43546F</color>
