--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -26,24 +26,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/v_top" />
 
-    <ImageButton
-        android:id="@+id/btn_custom_serivce"
-        android:layout_width="26dp"
-        android:layout_height="20dp"
-        android:layout_marginEnd="24dp"
-        android:background="@null"
-        android:contentDescription="@null"
-        android:scaleX="0.9"
-        android:scaleY="0.9"
-        android:src="@drawable/ic_customer"
+    <TextView
+        android:id="@+id/tv_title_forget_password"
+        android:layout_marginTop="@dimen/margin_20"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:textSize="24dp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/v_top"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btn_back" />
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <ImageView
         android:id="@+id/ivLogo"
         android:layout_width="151dp"
         android:layout_height="60dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="100dp"
         android:src="@drawable/okbet_login_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -177,21 +176,12 @@
                 android:visibility="gone"
                 android:id="@+id/tv_sms_send"
                 android:layout_marginTop="@dimen/margin_10"
+                android:maxLines="2"
                 app:layout_constraintTop_toBottomOf="@+id/block_sms_valid_code"
-                android:text="@string/has_send_message_to_phone"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
-                <TextView
-                    android:visibility="gone"
-                    android:id="@+id/tv_sms_send2"
-                    android:textColor="@color/color_025BE8"
-                    android:layout_marginTop="@dimen/margin_10"
-                    app:layout_constraintStart_toEndOf="@+id/tv_sms_send"
-                    app:layout_constraintTop_toBottomOf="@+id/block_sms_valid_code"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="+63 ******3729"/>
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
             <androidx.constraintlayout.widget.ConstraintLayout
