--- a/app/src/main/res/layout/item_hot_handicap.xml
+++ b/app/src/main/res/layout/item_hot_handicap.xml
@@ -56,22 +56,25 @@
              tools:ignore="MissingConstraints">
             <TextView
                 android:textColor="@color/color_6C7BA8_6C7BA8"
-               android:gravity="center"
+                android:gravity="center"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
+                android:textSize="@dimen/textSize12sp"
                 tools:text="大"/>
             <TextView
                 android:gravity="center"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
+                android:textSize="@dimen/textSize12sp"
                 tools:text="大"/>
             <TextView
                 android:gravity="center"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
+                android:textSize="@dimen/textSize12sp"
                 tools:text="大"/>
          </LinearLayout>
       </androidx.constraintlayout.widget.ConstraintLayout>
