--- a/app/src/main/res/layout/tab_item_home_open.xml
+++ b/app/src/main/res/layout/tab_item_home_open.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
     android:background="@drawable/selector_item_tab_home"
-    android:layout_width="@dimen/margin_54"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
     xmlns:tools="http://schemas.android.com/tools">
     <ImageView
         android:id="@+id/iv_tab_icon"
-        android:layout_width="@dimen/margin_25"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/margin_30"
         tools:src="@drawable/icon_recommend"/>
     <TextView
         android:gravity="center"
