--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -96,17 +96,13 @@
                     android:src="@drawable/ic_customer_service" />
 
             </LinearLayout>
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tab_layout_home"
-                tl:tabMode="fixed"
-                tl:tabPaddingStart="0dp"
-                tl:tabPaddingEnd="0dp"
-                tl:tabIndicatorHeight="0dp"
-                android:paddingHorizontal="@dimen/margin_10"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+           <include
+               layout="@layout/tab_item_home_open"/>
 
-            </com.google.android.material.tabs.TabLayout>
+            <FrameLayout
+                android:id="@+id/home_content_fragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
