--- a/app/src/main/res/layout/item_hot_live.xml
+++ b/app/src/main/res/layout/item_hot_live.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/margin_8"
+    android:layout_marginBottom="@dimen/margin_8"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <ImageView
@@ -57,6 +57,7 @@
                 tools:text="3"/>
         </LinearLayout>
         <LinearLayout
+            android:layout_marginTop="@dimen/margin_10"
             android:layout_marginBottom="@dimen/dp_10"
             android:orientation="horizontal"
             android:layout_width="match_parent"
