--- a/app/src/main/res/layout/fragment_home_live.xml
+++ b/app/src/main/res/layout/fragment_home_live.xml
@@ -7,6 +7,11 @@
     android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_tab_home"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_live"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
