--- a/app/src/main/res/layout/item_sport_odd.xml
+++ b/app/src/main/res/layout/item_sport_odd.xml
@@ -434,6 +434,16 @@
                         android:paddingRight="10dp">
 
                         <ImageView
+                            android:id="@+id/iv_live"
+                            android:layout_width="16dp"
+                            android:layout_height="16dp"
+                            android:layout_marginEnd="5dp"
+                            android:src="@drawable/ic_live"
+                            android:visibility="gone"
+                            tools:ignore="ContentDescription"
+                            tools:visibility="visible" />
+
+                        <ImageView
                             android:id="@+id/iv_play"
                             android:layout_width="16dp"
                             android:layout_height="16dp"
