首页热门赛事直播UI绘制

--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -96,8 +96,9 @@
                     android:src="@drawable/ic_customer_service" />
 
             </LinearLayout>
-
-            <include layout="@layout/tab_item_home_open" />
+           <include
+               layout="@layout/tab_item_home_open"/>
+            <include layout="@layout/hot_live_match_include"/>
 
             <FrameLayout
                 android:id="@+id/home_content_fragment"
