--- a/app/src/main/res/layout/fragment_home_live.xml
+++ b/app/src/main/res/layout/fragment_home_live.xml
@@ -2,17 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:fitsSystemWindows="true"
     android:background="@color/background"
     android:orientation="vertical">
 
+    <include
+        android:id="@+id/lin_toolbar"
+        layout="@layout/view_toolbar_home" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_tab_home"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="40dp"
+        android:layout_marginHorizontal="@dimen/margin_15"
+        tools:itemCount="6"
+        tools:listitem="@layout/item_tab_home" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_live"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="@dimen/margin_15"
+        tools:listitem="@layout/item_home_live"
+        tools:itemCount="3" />
 </LinearLayout>
