--- a/app/src/main/res/layout/item_tab_home.xml
+++ b/app/src/main/res/layout/item_tab_home.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="37dp"
     android:gravity="center_vertical"
     android:paddingHorizontal="10dp"
+    android:layout_marginRight="@dimen/margin_12"
     android:paddingBottom="3dp"
-    android:background="@drawable/bg_tab_home_nor">
+    android:background="@drawable/selector_tab_home">
 
     <ImageView
         android:id="@+id/iv_logo"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
-        android:src="@drawable/ic_sports_default" />
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:src="@drawable/selector_home_tab_recommend" />
 
     <TextView
         android:id="@+id/tv_name"
