--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -444,6 +444,12 @@
     <color name="color_0500181E">#0500181E</color>
     <color name="color_80C9CFD7">#80C9CFD7</color>
     <color name="color_EC4139">#EC4139</color>
+    <color name="color_F73C6C">#F73C6C</color>
+    <color name="color_E1EAF2">#E1EAF2</color>
+    <color name="color_F1A932">#F1A932</color>
+    <color name="color_0789F5">#0789F5</color>
+    <color name="color_C9E3FF">#C9E3FF</color>
+    <color name="color_F1F5FA">#F1F5FA</color>
 
     <!--region keyboard-->
     <color name="color_43546F">#43546F</color>
