--- a/app/src/main/res/layout/content_verify_identity_kyc.xml
+++ b/app/src/main/res/layout/content_verify_identity_kyc.xml
@@ -13,7 +13,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="1dp"
-        android:background="@color/exo_white"
+        android:background="@color/color_FFFFFF"
         android:orientation="horizontal"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,7 +60,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="1dp"
-        android:background="@color/exo_white"
+        android:background="@color/color_FFFFFF"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/cl_type"
