--- a/app/src/main/res/drawable/bg_white_walle.xml
+++ b/app/src/main/res/drawable/bg_white_walle.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <corners android:radius="@dimen/margin_10" />
 
-    <solid android:color="@color/exo_white" />
+    <solid android:color="@color/color_FFFFFF" />
 
 
 </shape>
