--- a/app/src/main/res/layout/activity_bank.xml
+++ b/app/src/main/res/layout/activity_bank.xml
@@ -11,7 +11,7 @@
         android:id="@+id/custom_tool_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/exo_white"
+        android:background="@color/color_FFFFFF"
         app:topTitleText="@string/withdraw_setting"/>
 
     <androidx.fragment.app.FragmentContainerView
