--- a/app/src/main/res/layout/activity_money_recharge.xml
+++ b/app/src/main/res/layout/activity_money_recharge.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_1"
-            android:background="@color/exo_white"
+            android:background="@color/color_FFFFFF"
             app:firstTabText="@string/txv_transfer_pay"
             app:secondTabText="@string/recharge_channel_online" />
 
