--- a/app/src/main/res/layout/activity_timezone.xml
+++ b/app/src/main/res/layout/activity_timezone.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="@dimen/margin_1"
-        android:background="@color/exo_white">
+        android:background="@color/color_FFFFFF">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -60,7 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_10"
-            android:background="@color/exo_white"
+            android:background="@color/color_FFFFFF"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:itemCount="6"
             tools:listitem="@layout/item_timezone" />
