--- a/app/src/main/res/layout/fragment_bet_station.xml
+++ b/app/src/main/res/layout/fragment_bet_station.xml
@@ -51,7 +51,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/now_balance"
-                            android:textColor="@color/exo_white"
+                            android:textColor="@color/color_FFFFFF"
                             android:textSize="@dimen/textSize14sp"
                             android:textStyle="bold" />
                     </RelativeLayout>
@@ -67,7 +67,7 @@
                             android:id="@+id/tv_currency_type"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/exo_white"
+                            android:textColor="@color/color_FFFFFF"
                             android:textSize="@dimen/textSize20sp"
                             tools:text="₱" />
 
@@ -78,7 +78,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
                             android:text="0"
-                            android:textColor="@color/exo_white"
+                            android:textColor="@color/color_FFFFFF"
                             android:textSize="@dimen/textSize20sp"
                             tools:text="19940.000" />
                     </LinearLayout>
@@ -184,7 +184,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="1dp"
-                android:background="@color/exo_white"
+                android:background="@color/color_FFFFFF"
                 android:orientation="vertical"
                 android:paddingHorizontal="10dp"
                 android:paddingBottom="10dp">
