--- a/app/src/main/res/layout/fragment_profile_center.xml
+++ b/app/src/main/res/layout/fragment_profile_center.xml
@@ -105,7 +105,7 @@
                             android:layout_centerVertical="true"
                             android:scaleType="centerCrop"
                             android:src="@drawable/ic_person_avatar"
-                            app:riv_border_color="@color/exo_white"
+                            app:riv_border_color="@color/color_FFFFFF"
                             app:riv_border_width="@dimen/margin_1"
                             app:riv_oval="true" />
 
