--- a/app/src/main/res/layout/view_account_balance.xml
+++ b/app/src/main/res/layout/view_account_balance.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/account_balance_view"
     android:layout_width="match_parent"
@@ -38,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/now_balance"
-                android:textColor="@color/exo_white"
+                android:textColor="@color/color_FFFFFF"
                 android:textSize="@dimen/textSize14sp"
                 android:textStyle="bold" />
         </RelativeLayout>
@@ -54,7 +53,7 @@
                 android:id="@+id/tv_currency_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/exo_white"
+                android:textColor="@color/color_FFFFFF"
                 android:textSize="@dimen/textSize20sp"
                 tools:text="₱" />
 
@@ -65,7 +64,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:text="0"
-                android:textColor="@color/exo_white"
+                android:textColor="@color/color_FFFFFF"
                 android:textSize="@dimen/textSize20sp"
                 tools:text="19940.000" />
 
