--- a/app/src/main/res/layout/view_toolbar_detail_live.xml
+++ b/app/src/main/res/layout/view_toolbar_detail_live.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fl_root"
     android:layout_width="match_parent"
@@ -34,16 +33,15 @@
                 android:textColor="@color/color_317FFF_0760D4"
                 android:textSize="@dimen/margin_14" />
 
-            <!-- Media Layout -->
-            <com.google.android.exoplayer2.ui.PlayerView
+            <com.pili.pldroid.player.widget.PLVideoView
                 android:id="@+id/player_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_centerInParent="true"
                 android:visibility="visible"
-                tools:visibility="visible"
-                app:use_controller="false" />
+                tools:visibility="visible" />
 
-            <org.cxct.sportlottery.widget.MyWebView
+            <WebView
                 android:id="@+id/web_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
