--- a/app/src/main/res/layout/view_toolbar_home.xml
+++ b/app/src/main/res/layout/view_toolbar_home.xml
@@ -32,12 +32,12 @@
         android:src="@drawable/logo_okbet_color" />
 
     <include
-        android:visibility="gone"
         android:id="@+id/lin_search"
         android:layout_width="0dp"
         android:layout_height="@dimen/margin_26"
         android:layout_weight="1"
         android:layout_marginLeft="@dimen/margin_16"
+        android:visibility="gone"
         layout="@layout/view_search" />
     <LinearLayout
         android:id="@+id/ll_user_money"
@@ -80,7 +80,7 @@
         android:visibility="visible"
         android:gravity="right"
         android:orientation="horizontal"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/btn_register"
