首页热门直播假数据适配器

--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -107,6 +107,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/margin_12"/>
             <include layout="@layout/hot_gaming_include"/>
+            <View
+                android:background="@color/color_E1EAF2"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/margin_12"/>
+            <include layout="@layout/hot_card_game_include"/>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </LinearLayout>
