--- a/app/src/main/res/layout/item_hot_live.xml
+++ b/app/src/main/res/layout/item_hot_live.xml
@@ -14,6 +14,7 @@
         android:layout_width="6dp"
         android:layout_height="wrap_content"/>
     <LinearLayout
+        android:id="@+id/ll_root"
         android:orientation="vertical"
         app:layout_constraintStart_toEndOf="@+id/iv_triangle_left"
         app:layout_constraintTop_toTopOf="parent"
@@ -57,8 +58,8 @@
                 tools:text="3"/>
         </LinearLayout>
         <LinearLayout
-            android:layout_marginTop="@dimen/margin_10"
             android:layout_marginBottom="@dimen/dp_10"
+            android:layout_marginTop="@dimen/margin_4"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
