首页热门直播假数据适配器完善

--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -99,6 +99,7 @@
            <include
                layout="@layout/tab_item_home_open"/>
             <include
+                android:id="@+id/hot_live_match"
                 layout="@layout/hot_live_match_include"/>
             <include
                 layout="@layout/hot_handicap_include"/>
