--- a/app/src/main/res/drawable/bg_hot_live_bg.xml
+++ b/app/src/main/res/drawable/bg_hot_live_bg.xml
@@ -4,6 +4,5 @@
         android:angle="90"
         android:endColor="@color/color_B6C8FF"
         android:startColor="@color/color_9CB4FC" />
-    <corners android:topLeftRadius="@dimen/margin_8"
-        android:topRightRadius="@dimen/margin_8"/>
+    <corners android:radius="@dimen/margin_8"/>
 </shape>
