--- a/app/src/main/res/layout/item_hot_live.xml
+++ b/app/src/main/res/layout/item_hot_live.xml
@@ -37,7 +37,7 @@
                 android:id="@+id/tv_team_name1"
                 android:layout_marginTop="@dimen/margin_6"
                 android:layout_marginStart="@dimen/dp_4"
-                android:textColor="@color/color_025BE8"
+                android:textColor="@color/selector_outright_button_odd_bottom_text"
                 android:textSize="@dimen/margin_12"
                 android:maxLines="1"
                 android:ellipsize="end"
@@ -49,7 +49,7 @@
                 android:id="@+id/tv_team_score1"
                 android:layout_marginTop="@dimen/margin_8"
                 android:layout_marginEnd="@dimen/dp_10"
-                android:textColor="@color/color_025BE8"
+                android:textColor="@color/selector_outright_button_odd_bottom_text"
                 android:layout_width="0dp"
                 android:layout_weight="0.8"
                 android:textSize="@dimen/textSize16sp"
@@ -75,7 +75,7 @@
                 android:id="@+id/tv_team_name2"
                 android:layout_marginTop="@dimen/margin_6"
                 android:layout_marginStart="@dimen/dp_4"
-                android:textColor="@color/color_025BE8"
+                android:textColor="@color/selector_outright_button_odd_bottom_text"
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:layout_width="0dp"
@@ -87,7 +87,7 @@
                 android:id="@+id/tv_team_score2"
                 android:layout_width="0dp"
                 android:layout_weight="0.8"
-                android:textColor="@color/color_025BE8"
+                android:textColor="@color/selector_outright_button_odd_bottom_text"
                 android:gravity="end"
                 android:textSize="@dimen/textSize16sp"
                 android:layout_marginTop="@dimen/margin_8"
