--- a/app/src/main/res/layout/hot_card_game_include.xml
+++ b/app/src/main/res/layout/hot_card_game_include.xml
@@ -50,8 +50,9 @@
             android:layout_height="wrap_content"/>
     </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_chess"
         android:paddingHorizontal="@dimen/margin_10"
-        android:layout_marginTop="@dimen/margin_20"
+        android:layout_marginTop="@dimen/margin_8"
         android:paddingBottom="@dimen/margin_30"
         app:layout_constraintTop_toBottomOf="@+id/iv_poker_game"
         android:layout_width="match_parent"
