--- a/app/src/main/res/layout/hot_gaming_include.xml
+++ b/app/src/main/res/layout/hot_gaming_include.xml
@@ -50,6 +50,7 @@
             android:layout_height="wrap_content"/>
     </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_egame"
         android:paddingHorizontal="@dimen/margin_10"
         android:layout_marginTop="@dimen/margin_20"
         android:paddingBottom="@dimen/margin_30"
