--- a/app/src/main/res/layout/item_hot_live.xml
+++ b/app/src/main/res/layout/item_hot_live.xml
@@ -17,9 +17,10 @@
         android:id="@+id/ll_root"
         android:orientation="vertical"
         app:layout_constraintStart_toEndOf="@+id/iv_triangle_left"
+
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/bg_skin_select_money_type_effect_main_light_color"
-        android:layout_width="match_parent"
+        android:background="@drawable/bg_select_live_match_color"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent">
         <LinearLayout
             android:orientation="horizontal"
